The text of the chats was updated

--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>لوازم خانگی لطیفیان</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css'><link rel="stylesheet" href="./style.css">
+  <title>فروشگاه لوازم خانگی لطیفیان</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css'>
+  <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
-<body>
-  <a href="https://sleepers.ir" target="_blank">
-<!-- partial:index.partial.html -->
-<section class="hero is-info is-fullheight is-bold is-centered">
-  <div class="hero-body">
-    <div class="container">
-          <div id="mockChat"></div>
-    </div>
-  </div>
-</section>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    
-    mockChat.init({
-      id: "mockChat",
-      //data: ["Bonjour, souhaitez-vous me parler ?", "Oui, j'aimerais savoir ou se situe votre hôtel.", "Nous au 20 avenue Jean Michel dans le 6e arrondissement de Marseille.", "Merci !", "A votre service 🙂"],
-      data: ["سلام رضا میدونی از کجا میتونم تلویزیون با قیمت مناسب بخرم؟ ", "به به سلام حالت چطوره؟ اره دوستم فروشگاه اینترنتی لوازم خونگی داره با قیمت های مفت", "جدی میگی؟ لینک سایت شون رو میفرستی برام برم ببینم", "اره! لینک سایت شون هم اینه برو ببین" 
-, "latifianshop.ir"],
-      loop: true,
-      delay: 2000, // Delay between messages
-      startDelay: 1200, // Delay before starting the animation
-      restartDelay: 3000, // Delay before restarting the animation if loop is set to true
-      loop: true, // Loop the animation
-    });
-    
-  })
-</script>
-<!-- partial -->
-  <script  src="./script.js"></script>
-</a>
+<body>
+  <a href="https://latifianshop.ir" target="_blank">
+    <!-- partial:index.partial.html -->
+    <section class="hero is-info is-fullheight is-bold is-centered">
+      <div class="hero-body">
+        <div class="container">
+          <div id="mockChat"></div>
+        </div>
+      </div>
+    </section>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+
+        mockChat.init({
+          id: "mockChat",
+          //data: ["Bonjour, souhaitez-vous me parler ?", "Oui, j'aimerais savoir ou se situe votre hôtel.", "Nous au 20 avenue Jean Michel dans le 6e arrondissement de Marseille.", "Merci !", "A votre service 🙂"],
+          data: ["سلام رضا🙋🏻‍♂️ میدونی از کجا میتونم لوازم خانگی باکیفیت بخرم؟ که قیمت شون هم مناسب باشه و خیالم راحت باشه🤔", "سلام حالت چطوره؟😊 آره حتماً، دوستم فروشگاه لوازم خانگی داره و می‌شناسم ش قیمت ها و محصولات شون عالیه😍🔥", "جدی میگی؟😳 از کجا میتونم محصولات شون رو ببینم؟", "آدرس فروشگاه حضوری شون اینه: مشهد ، میدان حافظ ، مرکز تجاری امیر ، فاز3 ، طبقه همکف ، پلاک52 ، محصولات شون رو از سایت لوازم خانگی لطیفیان هم میتونی ببینی"
+            ,"ممنونم😊 لینک ش رو برام میفرستی🙏🏻🌹", "latifianshop.ir", "دستت دردنکنه😊"],
+          loop: true,
+          delay: 2000, // Delay between messages
+          startDelay: 1200, // Delay before starting the animation
+          restartDelay: 3000, // Delay before restarting the animation if loop is set to true
+          loop: true, // Loop the animation
+        });
+
+      })
+    </script>
+    <!-- partial -->
+    <script src="./assets/js/script.js"></script>
+  </a>
 </body>
+
 </html>
