--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>فروشگاه لوازم خانگی لطیفیان</title>
+  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css'>
   <link rel="stylesheet" href="./assets/css/style.css">
